--- a/index.html
+++ b/index.html
@@ -40,8 +40,10 @@
       </ul>
 
       <footer>Feito com 💜 por 
-        <a href="https://github.com/jefersonmanini" target="_blank"> 
-        jeferson Manini</a>
+        <a href="https://www.instagram.com/magnomanini/" target="_blank"> 
+          jeferson Manini</a>
+          <a href="https://jefersonmanini.github.io/minasdosaber-barmodel/" target="_blank"> 
+            Minas do Saber</a>
       </footer>
     
     </div>
